# repartition-demo

./: .gitignore  CODEOWNERS  LICENSE  README.md  hatch.toml  pyproject.toml  requirements.txt  ruff-default.toml
examples/: actor_demo.py  demo2.py  simple_list_demo.py
scripts/examples/: actor_demo.py  actor_demo_expected.py  async_demo1.py  demo2.py  repart_demo1.py
src/repartition/async_impl/: util.py
src/repartition/boundaries/: impl.py
src/repartition/ray/: block_impl.py  dummy_ref_bundles.py
src/repartition/ray/actor_impl/: core.py  dummy_ref_bundles.py  scheduler.py
src/repartition/ray/ray_data_impl/: __init__.py  dummy_ref_bundles.py  repartition_task_spec.py  scheduler.py
src/repartition/ray_data/_internal/: repartition_by_column.py
src/repartition/ray_data/_internal/planner/: repartition_by_column.py
src/repartition/ray_data/_internal/planner/exchange/: repartition_task_scheduler.py
src/repartition/serial/: list_impl.py
src/utils/: generate_data.py  list_files.py  timer.py
tests/: test_boundaries.py  test_ray_data_block_impl.py  test_serial_list.py
